--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "construction-co",
+  "name": "mohanty-projects",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mohantyprojects.com",
   "dependencies": {
     "@react-spring/web": "^10.0.1",
     "@testing-library/jest-dom": "^5.17.0",
