--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://mohantyprojects.com",
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@react-spring/web": "^10.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
